# planning-poker

./: .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  generate-dockerfile.sh  shell.nix
.github/workflows/: auto-upgrade-dependencies.yml  build-and-test.yml  deploy.yml  publish-crates.yml
examples/: simulation_config.md
spec/: README.md
spec/base-functionality/: PREAMBLE.md  overview.md  patterns.md
terraform/: README.md
terraform/environments/: build.tf  cert-manager.tf  cloudflare.tf  cloudfront.tf  digitalocean.tf  kubernetes.tf  lambda.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: build-and-deploy.sh  build-container.sh  build-lambda.sh  build-static.sh  deploy.sh  redeploy.sh  upload-assets.sh
terraform/shared/: certificate.tf  main.tf  outputs.tf  variables.tf
