[workspace]
members = [
    "packages/app",
    "packages/config",
    "packages/database",
    "packages/models",
    "packages/poker",
    "packages/schema",
    "packages/session",
    "packages/ui",
]

resolver = "2"

[workspace.metadata.cargo-udeps.ignore]
normal = ["log", "planning_poker_config"]

[workspace.metadata.cargo-machete]
ignored = ["log", "planning_poker_config"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

[workspace.package]
authors    = ["Planning Poker Contributors"]
edition    = "2021"
license    = "MPL-2.0"
repository = "https://github.com/planning-poker/planning-poker"

[workspace.dependencies]
# Internal Planning Poker packages
planning_poker_app      = { version = "0.1.0", default-features = false, path = "packages/app" }
planning_poker_config   = { version = "0.1.0", default-features = false, path = "packages/config" }
planning_poker_database = { version = "0.1.0", default-features = false, path = "packages/database" }
planning_poker_models   = { version = "0.1.0", default-features = false, path = "packages/models" }
planning_poker_poker    = { version = "0.1.0", default-features = false, path = "packages/poker" }
planning_poker_schema   = { version = "0.1.0", default-features = false, path = "packages/schema" }
planning_poker_session  = { version = "0.1.0", default-features = false, path = "packages/session" }
planning_poker_ui       = { version = "0.1.0", default-features = false, path = "packages/ui" }

# External dependencies from MoosicBox workspace
# HyperChad UI Framework
hyperchad = { version = "0.1.0", default-features = false, path = "../MoosicBox/packages/hyperchad" }

# Switchy Runtime
switchy = { version = "0.1.4", default-features = false, path = "../MoosicBox/packages/switchy" }

# Common dependencies
actix-web = "4.11.0"

anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.0"
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.5.41", features = ["derive"] }
eframe = { version = "0.32.0", default-features = false }
egui = { version = "0.32.0", default-features = false }
futures = "0.3"
include_dir = "0.7.4"
log = { version = "0.4", features = ["release_max_level_trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1" }

tracing            = "0.1.41"
tracing-subscriber = "0.3.19"
url                = "2.5.4"
uuid               = { version = "1.17.0", features = ["serde", "v4"] }
