[workspace]
members = [
    "packages/app",
    "packages/config",
    "packages/database",
    "packages/models",
    "packages/poker",
    "packages/schema",
    "packages/session",
    "packages/simulator",
    "packages/state",
    "packages/ui",
]

resolver = "2"

[workspace.metadata.cargo-udeps.ignore]
normal = ["log", "planning_poker_config"]

[workspace.metadata.cargo-machete]
ignored = ["log", "planning_poker_config"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

[workspace.package]
authors    = ["Planning Poker Contributors"]
edition    = "2021"
license    = "MPL-2.0"
repository = "https://github.com/planning-poker/planning-poker"

[workspace.dependencies]
# Internal Planning Poker packages
planning_poker_app       = { version = "0.1.0", default-features = false, path = "packages/app" }
planning_poker_config    = { version = "0.1.0", default-features = false, path = "packages/config" }
planning_poker_database  = { version = "0.1.0", default-features = false, path = "packages/database" }
planning_poker_models    = { version = "0.1.0", default-features = false, path = "packages/models" }
planning_poker_poker     = { version = "0.1.0", default-features = false, path = "packages/poker" }
planning_poker_schema    = { version = "0.1.0", default-features = false, path = "packages/schema" }
planning_poker_session   = { version = "0.1.0", default-features = false, path = "packages/session" }
planning_poker_simulator = { version = "0.1.0", default-features = false, path = "packages/simulator" }
planning_poker_state     = { version = "0.1.0", default-features = false, path = "packages/state" }
planning_poker_ui        = { version = "0.1.0", default-features = false, path = "packages/ui" }

# External dependencies from MoosicBox workspace
# HyperChad UI Framework
hyperchad = { version = "0.1.0", default-features = false, git = "https://github.com/MoosicBox/MoosicBox" }

# Switchy Runtime
switchy = { version = "0.1.4", default-features = false, git = "https://github.com/MoosicBox/MoosicBox" }

# Simvar for deterministic simulation testing
simvar = { version = "0.1.0", default-features = false, git = "https://github.com/MoosicBox/MoosicBox" }

# MoosicBox JSON utilities for database mapping
moosicbox_json_utils = { version = "0.1.4", default-features = false, git = "https://github.com/MoosicBox/MoosicBox" }

anyhow = "1.0.99"
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.5.45", features = ["derive"] }
include_dir = "0.7.4"
log = { version = "0.4.27", features = ["release_max_level_trace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.14"
tokio = { version = "1.47.1" }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.18.0", features = ["serde", "v4"] }

# [patch.'https://github.com/MoosicBox/MoosicBox']
# hyperchad            = { path = "../MoosicBox/packages/hyperchad" }
# moosicbox_json_utils = { path = "../MoosicBox/packages/json_utils" }
# simvar               = { path = "../MoosicBox/packages/simvar" }
# switchy              = { path = "../MoosicBox/packages/switchy" }
